fix ArchiveDataModal styling/set input form to be hidden by default

--- a/src/components/ArchivedDataModal/ArchivedDataModal.css
+++ b/src/components/ArchivedDataModal/ArchivedDataModal.css
@@ -1,6 +1,9 @@
 .archived-modal {
     height: 100vh;
     width: calc(100% - 2rem);
+    height: calc(100% - 2rem);
+    padding: 2rem;
+    margin: auto;
     max-width: 1200px;
     font-weight: 400;
 }
